# budgie-quicklaunch

./: LICENSE  Makefile  Makefile.am  PyLaunch.plugin  README.md  budgie-quicklaunch.py.in  main.ui  meson.build  pylaunch.py
data/: PyLaunch.plugin  main.ui  meson.build  org.lachlandewaard.budgie-quicklaunch.gschema.xml  org.lachlandewaard.org.budgie-quicklaunch.appstream.xml
